# APproject

./: .gitignore  Algorithm graphs.docx  ProjectPlan.md  README.md  client.py  client2.py  compile.txt  plan.docx
empirical_research/: matrices.txt
src/: CMakeLists.txt  main.cpp  tester  tester.cpp
src/cache/: 2728504729.txt  4000538224.txt  info.txt
src/cachemanager/: CacheManager.cpp  CacheManager.hpp  Operation.cpp  Operation.hpp  OperationExceptions.hpp  OperationExeptions.cpp  SolverOperation.cpp  SolverOperation.hpp
src/cachemanager/util/: Crc32.c  HashUtil.cpp  HashUtil.hpp
src/clienthandlers/: AbstractClientHandler.cpp  AbstractClientHandler.hpp  AlgorithmClientHandler.hpp  ClientHandler.hpp  ServerExceptions.cpp  ServerExceptions.hpp  SolverClientHandler.hpp
src/exceptions/: OperationExceptions.cpp  OperationExceptions.hpp  OperationExeptions.cpp  ParserExceptions.cpp  ParserExceptions.hpp  SearchExceptions.cpp  SearchExceptions.hpp  ServerExceptions.cpp  ServerExceptions.hpp  StatusException.cpp  StatusException.hpp
src/factories/: SolverFactory.cpp  SolverFactory.hpp
src/parsers/: GraphInputParser.cpp  GraphInputParser.hpp  GraphParser.cpp  GraphParser.hpp  InputParser.hpp  Parser.hpp  ParserExceptions.hpp  SearcherInputParser.cpp  SearcherInputParser.hpp
src/search/: SearchExceptions.cpp  SearchExceptions.hpp
src/search/searchable/: AbstractSearchable.hpp  Element.cpp  Element.hpp  Graph.cpp  Graph.hpp  GraphElement.cpp  GraphElement.hpp  Searchable.hpp
src/search/searchable/matrix/: ErrorCode.cpp  ErrorCode.hpp  Matrix.cpp  Matrix.hpp
src/search/searcher/: AStarSearcher.hpp  AbstractSearcher.hpp  BFSSearcher.hpp  BestFSSearcher.hpp  DFSSearcher.hpp  SearchResult.cpp  SearchResult.hpp  Searcher.hpp  SearcherFactory.hpp
src/searcher/: AbstractSearchable.cpp  AbstractSearchable.hpp  BFSSearcher.cpp  BFSSearcher.hpp  DFSSearcher.cpp  DFSSearcher.hpp  Element.cpp  Element.hpp  Graph.cpp  Graph.hpp  Searchable.cpp  Searchable.hpp  Searcher.cpp  Searcher.hpp
src/server/: ParallelServer.cpp  ParallelServer.hpp  SerialServer.cpp  SerialServer.hpp  Server.hpp  ServerExceptions.cpp  ServerExceptions.hpp  ServerFactory.hpp
src/server/clienthandlers/: AbstractClientHandler.cpp
src/solvers/: SearchSolver.cpp  SearchSolver.hpp  SearchSolverFactory.cpp  SearchSolverFactory.hpp  Solver.hpp  SolverFactory.cpp  SolverFactory.hpp
